variables.Variables.scala.error
Erreur de compilation :
Variables:7: error: not found: value ramasseBiscuit
  ramasseBiscuit();
  ^Variables:8: error: not found: value nbpas
  recule(nbpas:Int);
         ^